version mobile de mon espace et fix footer-mobile

--- a/src/app/User/user-bikeride-list/user-bikeride-list.component.scss
+++ b/src/app/User/user-bikeride-list/user-bikeride-list.component.scss
@@ -31,10 +31,12 @@
 
     .list-group-item {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
-
+    
     .list-title {
-        width: 100%;
+        width: 50%;
+        text-align: center;
     }
 }
