--- a/src/app/elements/footer/footer.component.scss
+++ b/src/app/elements/footer/footer.component.scss
@@ -55,7 +55,7 @@ a {
     background-color: white;
     border-radius: 5px;
     border-width: 1px;
-    border-color: rgb(149, 193, 31);
+    border-color: #95c11f;
     text-align: center;
     padding: 3px 10px;
     text-decoration: none
@@ -63,7 +63,7 @@ a {
   
   .btn1:hover {
     background: #FFFFFF;
-    box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 2px 1px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 2px 1px 0 #00000033, 0 2px 1px 0 #00000030;
   }
   
   .btnvert {
@@ -84,18 +84,24 @@ a {
 
 @media screen and (max-width: 994px) {
 
+    a {
+        font-size: 0.8em;
+    }
+
     .links {
-        width: 100%;
+        width: 80%;
     }
     
     .liens {
         flex-direction: row;
         justify-content: space-around;
         width: 100%;
+        padding: 0;
     }
 
     .newsletter {
-        width: 100%;
+        width: 80%;
+        font-size: 0.8em;
     }
 
 }
